--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -101,7 +101,7 @@
 <!-- frontpage.html -->
 
 
-    <!-- Optional JavaScript -->
+    <!-- Optional JavvaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
    <script src="{% static 'js/bootstrap.js' %}"></script>
    <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
